# task_k

./: CMakeLists.txt  readme.md  task.txt
src/client/: client_connect.cpp  client_connect.h  client_main.cpp
src/common/: message.cpp  message.h  scanner.cpp  scanner.h
src/server/: fd_resource.h  listen_socket.h  main.cpp  stats_store.cpp  stats_store.h  worker_child.cpp  worker_child.h  worker_list.h
src/stats/: stats_main.cpp  stats_request.cpp  stats_request.h
src/test/: test_integration.cpp  test_message.cpp  test_scanner.cpp  test_stats_store.cpp
